[package]
name = "telepath"
version = "0.1.0"
edition = "2021"
authors = ["Oasin Lyu <lfod1997@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
globset = "0.4"
clap = { version = "4.4", features = ["derive"] }
anstream = "0.6"
owo-colors = "4"

[profile.release]
strip = "debuginfo"
panic = "abort"
codegen-units = 1
lto = true
